--- a/index.html
+++ b/index.html
@@ -7,37 +7,59 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Results summary component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
+  <div class="contaner">
+    <div class="result">
+      <div class="header">
+        <p>Your Result</p>
+      </div>
+      <div class="circle">
+        <h1>76</h1>
+        <p>of 100</p> 
+      </div>
+      <div class="footer">
+       <h1>Great</h1> 
+        <p>You scored higher than 65% of the people who have taken these tests.
+        </p> 
+      </div>
+    </div>
+    <div class="summary">
+      <h1>Summary</h1>
+      <div class="skills background-red">
+        <div class="img ">
+          <img src="assets/images/icon-reaction.svg" alt="icon-reaction">
+        <p class="something light-red">Reaction</p>
+        </div>
+        <p class="number">80 <span>/ 100</span></p>
+      </div>
+      <div class="skills background-yellow">
+        <div class="img">
+          <img src="assets/images/icon-memory.svg" alt="icon-memory">
+        <p class="something light-yellow">Memory</p>
+        </div>
+        <p class="number">92 <span>/ 100</span></p>
+      </div>
+      <div class="skills background-green">
+        <div class="img">
+          <img src="assets/images/icon-verbal.svg" alt="icon-verbal">
+        <p class="something green">Verbal</p>
+        </div>
+        <p class="number">61 <span>/ 100</span></p>
+      </div>
+      <div class="skills background-violet">
+        <div class="img">
+          <img src="assets/images/icon-visual.svg" alt="icon-visual">
+        <p class="something violate">Visual</p>
+        </div>
+        <p class="number">72 <span>/ 100</span></p>
+      </div>
+      <div class="buttion">
+        <button>Continue</button>
+      </div>
+    </div>
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
