--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/Bisratworku/resultes-summery">Bisrat Worku</a>.
   </div>
 </body>
 </html>
